# swarmInfer_esp32

./: .gitignore  CITATION.cff  LICENSE  README.md
common/: ina219.c  ina219.h  power_meter.c  power_meter.h  swarm_protocol.h  tensor_ops.c  tensor_ops.h
docs/: SwarmInfer_Experiment_Full.md  SwarmInfer_Port_Mapping.md  SwarmInfer_Progress.md  power_measurement_procedure.md
firmware/espnow_benchmark/: CMakeLists.txt
firmware/gather_benchmark_coordinator/: CMakeLists.txt
firmware/gather_benchmark_worker/: CMakeLists.txt
firmware/multi_coordinator/: CMakeLists.txt
firmware/multi_worker/: CMakeLists.txt
firmware/single_inference/: CMakeLists.txt
firmware/single_inference_mbnet/: CMakeLists.txt
firmware/sparse_bench/: CMakeLists.txt
firmware/swarm_coordinator/: CMakeLists.txt
firmware/swarm_coordinator_mbnet/: CMakeLists.txt
firmware/swarm_coordinator_mbnet/main/: CMakeLists.txt  swarm_coordinator_mbnet.c
firmware/swarm_coordinator_nscale/main/: CMakeLists.txt  swarm_coordinator_nscale.c
firmware/swarm_coordinator_rel/: CMakeLists.txt
firmware/swarm_worker_mbnet/: CMakeLists.txt
firmware/swarm_worker_mbnet/main/: CMakeLists.txt  swarm_worker_mbnet.c
firmware/swarm_worker_nscale/: CMakeLists.txt
firmware/swarm_worker_rel/: CMakeLists.txt
firmware/swarm_worker_rel/main/: CMakeLists.txt  swarm_worker.c
logs/reference_paper_runs/: README.md  accuracy_table.tex  mcnemar_lite_vs_n2.json  mcnemar_lite_vs_n4.json  per_layer_table.tex  (+3 more)
models/: analyze_nscale.py  analyze_rf_sweep.py  capture_nscale.py  capture_r2_12.py  export_batch.py  fix_quantize.py  partition_n.py  partition_nscale.py  power_analyze.py  quant_ablation.py  quantize_lite.py  seed_sweep.py  sparsity_dist.py  train_fatcnn.py  train_fatcnn_lite.py  verify_int8.py  verify_prediction.py
results/: mbnet_comm_volume.csv  mbnet_perround.csv  mbnet_r2_11.json  mbnet_r2_11.md  mcnemar_n2_vs_n4.json  nscale_scaling.json  nscale_scaling.md  power.json  quant_ablation.json  quant_ablation.md  quant_ablation_smoke.json  quant_ablation_smoke.md  rf_sweep.json  rf_sweep.md  seed_sweep.json  sparse_bench.csv  sparsity_dist.json  sparsity_dist.md
scripts/: analyze_logs.py  capture_serial.py  flash_coordinator.sh  flash_workers.sh  mcnemar.py  power_estimation.py  run_experiment.sh  setup_weights.sh
(+31 files in other folders)
